WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208953
[macOS] _AXSApplicationAccessibilityEnabled should not be called
https://bugs.webkit.org/show_bug.cgi?id=208953
Summary
[macOS] _AXSApplicationAccessibilityEnabled should not be called
Per Arne Vollan
Reported
2020-03-11 16:16:30 PDT
This function should only be called on iOS, not on macOS.
Attachments
Patch
(2.53 KB, patch)
2020-03-11 16:18 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Patch
(17.19 KB, patch)
2020-03-12 12:44 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Patch
(17.18 KB, patch)
2020-03-12 12:49 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2020-03-11 16:18:13 PDT
Created
attachment 393302
[details]
Patch
Brent Fulgham
Comment 2
2020-03-11 16:24:52 PDT
Comment on
attachment 393302
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=393302&action=review
> Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:459 > + if (_AXSApplicationAccessibilityEnabled())
So we still want to pass the cfprefsd extension on macOS without checking this call?
> Source/WebKit/UIProcess/Cocoa/WebProcessProxyCocoa.mm:213 > +#if PLATFORM(IOS_FAMILY)
Does this call work on MacCatalyst? Maybe this should exclude MacCatalyst builds?
Brent Fulgham
Comment 3
2020-03-11 16:25:16 PDT
r=me, but please make sure the MacCatalyst bits are correct.
Per Arne Vollan
Comment 4
2020-03-11 16:28:16 PDT
Committed
r258294
: <
https://trac.webkit.org/changeset/258294/webkit
>
Radar WebKit Bug Importer
Comment 5
2020-03-11 16:29:12 PDT
<
rdar://problem/60346791
>
Per Arne Vollan
Comment 6
2020-03-11 16:37:37 PDT
(In reply to Brent Fulgham from
comment #2
)
> Comment on
attachment 393302
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=393302&action=review
> > > Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:459 > > + if (_AXSApplicationAccessibilityEnabled()) > > So we still want to pass the cfprefsd extension on macOS without checking > this call? >
I believe we want a similar functionality on macOS, but we cannot use _AXSApplicationAccessibilityEnabled() for this. I am looking into alternatives.
> > Source/WebKit/UIProcess/Cocoa/WebProcessProxyCocoa.mm:213 > > +#if PLATFORM(IOS_FAMILY) > > Does this call work on MacCatalyst? Maybe this should exclude MacCatalyst > builds?
Yes, I believe this will work on MacCatalyst. Thanks for reviewing!
WebKit Commit Bot
Comment 7
2020-03-11 16:52:01 PDT
Re-opened since this is blocked by
bug 208957
Per Arne Vollan
Comment 8
2020-03-12 12:44:22 PDT
Created
attachment 393397
[details]
Patch
Per Arne Vollan
Comment 9
2020-03-12 12:49:58 PDT
Created
attachment 393400
[details]
Patch
Brent Fulgham
Comment 10
2020-03-12 13:27:05 PDT
Comment on
attachment 393400
[details]
Patch Hopefully this will get the bots happy. r=me
Per Arne Vollan
Comment 11
2020-03-12 13:50:55 PDT
Comment on
attachment 393400
[details]
Patch Thanks for reviewing!
WebKit Commit Bot
Comment 12
2020-03-12 14:36:14 PDT
Comment on
attachment 393400
[details]
Patch Clearing flags on attachment: 393400 Committed
r258359
: <
https://trac.webkit.org/changeset/258359
>
WebKit Commit Bot
Comment 13
2020-03-12 14:36:16 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug