[macOS] _AXSApplicationAccessibilityEnabled should not be called https://bugs.webkit.org/show_bug.cgi?id=208953

Reviewed by Brent Fulgham.

This function should only be called on iOS, not on macOS.

* UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::WebProcessPool::platformInitializeWebProcess):
* UIProcess/Cocoa/WebProcessProxyCocoa.mm:
(WebKit::WebProcessProxy::unblockAccessibilityServerIfNeeded):



Canonical link: https://commits.webkit.org/221868@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258294 268f45cc-cd09-0410-ab3c-d52691b4dbfc