Source/WebKit/UIProcess/Cocoa/WebProcessProxyCocoa.mm
@@ -46,10 +46,6 @@
 
 namespace WebKit {
 
-#if PLATFORM(MAC)
-SOFT_LINK_LIBRARY_OPTIONAL(libAccessibility)
-#endif
-
 static const Seconds unexpectedActivityDuration = 10_s;
 
 const HashSet<String>& WebProcessProxy::platformPathsWithAssumedReadAccess()
@@ -214,12 +210,10 @@ void WebProcessProxy::unblockAccessibilityServerIfNeeded()
 {
     if (m_hasSentMessageToUnblockAccessibilityServer)
         return;
-#if PLATFORM(MAC)
-    if (!WebKit::libAccessibilityLibrary())
-        return;
-#endif
+#if PLATFORM(IOS_FAMILY)
     if (!_AXSApplicationAccessibilityEnabled())
         return;
+#endif
     if (!processIdentifier())
         return;
     if (!canSendMessage())
